--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,14 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    
   },
   "exclude": [
     "node_modules",
     "cdk.out"
-  ]
+  ],
+  "include": [
+    "shared/*.json"
+  ],
 }
